# anitomy

./: .gitignore  CMakeLists.txt  README.md
anitomy/: config.h  element.h  keyword.h  parser.h  token.h  tokenizer.h
